modify: Add unit test for RichOpenGLBindingFeature.